middleware matcher, sub task list fix, tags selector dark mode styling, key prop warning commandsearchmenu

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -104,7 +104,7 @@
   padding: 0.25rem 0 0 0.25rem;
   border: 2px solid #afb8c1;
   border-radius: 6px;
-  background: #ffffff;
+  background: hsl(var(--background));
   /* shared font styles */
   font-size: 1rem;
   line-height: 1.2;
@@ -113,7 +113,7 @@
 }
 
 .react-tags.is-active {
-  border-color: #4f46e5;
+  border-color: hsl(var(--primary));
 }
 
 .react-tags.is-disabled {
@@ -154,15 +154,17 @@
   padding: 0.375rem 0.5rem;
   border: 0;
   border-radius: 3px;
-  background: #eaeef2;
+  background: hsl(var(--secondary));
   /* match the font styles */
   font-size: inherit;
   line-height: inherit;
 }
 
 .react-tags__tag:hover {
-  color: #ffffff;
-  background-color: #4f46e5;
+  /* color: #ffffff; */
+  background-color: hsl(var(--primary));
+  color: hsl(var(--primary-foreground)) !important;
+
 }
 
 .react-tags__tag::after {
@@ -186,11 +188,11 @@
   );
   margin-left: 0.5rem;
   font-size: 0.875rem;
-  background-color: #7c7d86;
+  background-color: hsl(var(--muted-foreground));
 }
 
 .react-tags__tag:hover::after {
-  background-color: #ffffff;
+  background-color: hsl(var(--primary-foreground));
 }
 
 .react-tags__combobox {
@@ -217,7 +219,7 @@
 }
 
 .react-tags__combobox-input::placeholder {
-  color: #7c7d86;
+  /* color: #7c7d86; */
   opacity: 1;
 }
 
@@ -230,7 +232,7 @@
   right: -2px;
   max-height: 12.5rem;
   overflow-y: auto;
-  background: #ffffff;
+  background: hsl(var(--background));
   border: 1px solid #afb8c1;
   border-radius: 6px;
   box-shadow:
@@ -244,16 +246,16 @@
 
 .react-tags__listbox-option:hover {
   cursor: pointer;
-  background: #eaeef2;
+  background: hsl(var(--secondary));
 }
 
 .react-tags__listbox-option:not([aria-disabled='true']).is-active {
-  background: #4f46e5;
-  color: #ffffff;
+  background: hsl(var(--primary));
+  color: hsl(var(--primary-foreground));
 }
 
 .react-tags__listbox-option[aria-disabled='true'] {
-  color: #7c7d86;
+  /* color: #7c7d86; */
   cursor: not-allowed;
   pointer-events: none;
 }
@@ -264,7 +266,7 @@
 }
 
 .react-tags__listbox-option[aria-selected='true']:not(.is-active)::after {
-  color: #4f46e5;
+  color: hsl(var(--primary));;
 }
 
 .react-tags__listbox-option-highlight {
@@ -281,7 +283,7 @@
   background-color: #00000003;
   margin: 0.25rem 0.5rem 0.5rem 0.25rem;
   justify-content: flex-start;
-  border: 1px solid #e2e2e2;
+  border: 1px solid hsl(var(--border));;
   align-items: flex-start;
   border-radius: 4px;
 }
@@ -294,5 +296,5 @@
   margin: 0;
   font-size: 0.8125rem;
   line-height: 1.5rem;
-  color: #00000080;
+  color: hsl(var(--primary-foreground));;
 }
